Make sure that we clean up block objects that were cloned into the scope chain for environment capture, so they don't reference dead frame pointers or dead stack slots, and instead have property-based copies of their locals. bug 343765, r=brendan